# learning-ai

./: .gitignore  POC_AZURE_NATIVE_PLAN.md  pyproject.toml  requirements.txt
.claude/: MEMORY.md  project_sprint1.md  settings.local.json
docs/: architecture-production.excalidraw  architecture.excalidraw
notebooks/: 01_xapi_ingestion.ipynb  03_dropout_prediction.ipynb
scripts/: 01_generate_synthetic_data.py  02_upload_to_fabric.py  05_index_courses_ai_search.py  06_create_foundry_agent.py  07_setup_foundry_iq.py
src/: config.py
src/analytics/: predictions.py  queries.py  recommender.py
src/fabric/: onelake.py  sql_client.py
src/foundry/: agent.py  chat.py  foundry_iq_chat.py
src/search/: index_manager.py  indexer.py  searcher.py
ui/: app.py
ui/pages/: 1_analytics_dashboard.py  2_ai_consultant.py  3_course_generator.py
